<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textViewLoading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/loading_text"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp" />

    <EditText
        android:id="@+id/etProductId"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/product_id_hint"
        android:minHeight="48dp"
        app:layout_constraintTop_toBottomOf="@id/textViewLoading"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintWidth_percent="0.8"
        android:inputType="number" />

    <EditText
        android:id="@+id/etProductName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/product_name_hint"
        android:minHeight="48dp"
        android:autofillHints="autofillHintName"
        app:layout_constraintTop_toBottomOf="@+id/etProductId"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintWidth_percent="0.8" />

    <EditText
        android:id="@+id/etProductDescription"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/product_description_hint"
        android:minHeight="48dp"
        android:autofillHints="autofillHintDescription"
        app:layout_constraintTop_toBottomOf="@+id/etProductName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintWidth_percent="0.8" />

    <EditText
        android:id="@+id/etProductPrice"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/product_price_hint"
        android:minHeight="48dp"
        android:autofillHints="autofillHintPrice"
        android:inputType="numberDecimal"
        app:layout_constraintTop_toBottomOf="@+id/etProductDescription"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintWidth_percent="0.8" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/etProductPrice"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:gravity="center"
        android:layout_marginTop="16dp">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnDeleteProduct"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/delete_product" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnAddProduct"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/add_product" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnUpdateProduct"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/update_product" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
